Fixing about text on mobile and took out 'learn more'

--- a/css/footer-style.css
+++ b/css/footer-style.css
@@ -5,10 +5,12 @@ footer {
     background-color: #0B0D0D;
     position: relative;
     color: #fff;
-    height: 78vh;
+    height: 100vh;
+    padding-top: 160px;
 }
 
 .footer-details>h4 {
+
     font-size: 20px;
     font-weight: 600;
     letter-spacing: 1px;
